@@ -52,10 +52,12 @@ Implement authPassword (RFC 3112)
 Add LDIFv2 (XML) support to command line tools
 Implement LDAPprep and SASLprep
 Implement additional matching rules (RFC 3698)
+Add syncrepl "turn" support
 Add dumpasn1 logging support
 Add tests to test suite
-Convert utfconv.txt into man page(s).
+Add jail(2) support
 Recode linked-list structs to use <ldap_queue.h> macros
+Convert utfconv.txt into man page(s).
 Update any manual page
 
 
